--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -448,7 +448,7 @@ h6 {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url("/assets/img/Toronto.jpg") top right;
+  background: url("/assets/img/Toronto.JPG");
   background-size: cover;
   position: relative;
 
