--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -448,7 +448,7 @@ h6 {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url("../BG.JPG");
+  background: url("../img/charles.JPG");
   background-size: cover;
   position: relative;
 
