--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -448,7 +448,7 @@ h6 {
 .hero {
   width: 100%;
   height: 100vh;
-  background-color: skyblue;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../BG.jpg");
   background-size: cover;
   position: relative;
 
