--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -726,7 +726,7 @@
     opacity: 0;
 }
 .skill-per.photo{
-    width: 85%;
+    width: 70%;
     animation-delay: 0.3s;
 }
 
@@ -736,17 +736,28 @@
 }
 
 .skill-per.html{
-  width: 60%;
+  width: 70%;
   animation-delay: 0.3s;
 }
 
 .skill-per.javascript{
-    width: 40%;
+    width: 50%;
     animation-delay: 0.3s;
 }
 
 .skill-per.CMS{
   width: 50%;
+  animation-delay: 0.3s;
+}
+
+.skill-per.graphic{
+  width: 80%;
+  animation-delay: 0.3s;
+}
+
+
+.skill-per.Support{
+  width: 65%;
   animation-delay: 0.3s;
 }
 
